Small setup update